@startuml

title __BOMBER's Class Diagram__\n

  namespace Bomber {
    class Bomber.Game {
        {static} + HEIGHT : int
        {static} + WIDTH : int
        + input : ArrayList<String>
        + mouseX : double
        + mouseY : double
        + numberOfEnemy : int
        + playerSpawnX : int
        + playerSpawnY : int
        {static} + textureFolderPath : String
        ~ addStack : Stack<Entity>
        ~ graphicsContext : GraphicsContext
        ~ removeStack : Stack<Entity>
        ~ scene : Scene
        {static} - bombCoolDown : int
        {static} - bombLevel : int
        - entities : List<Entity>
        - gatePassed : boolean
        {static} - hpPlayer : int
        - isShown : boolean
        {static} - playerSpeed : int
        - stillObjects : List<Entity>
        + Game()
        {static} + HpUp()
        {static} + addBomb()
        + addEnemy()
        + addEntity()
        {static} + bombLevelUp()
        + getGraphicsContext()
        + getInput()
        + isPlayAgain()
        + newGame()
        + newLevel()
        {static} + randomDouble()
        {static} + randomInt()
        + removeEntity()
        + render()
        + setGatePassed()
        {static} + setHpPlayer()
        + setMainMenu()
        + setScene()
        + spawnEnemy()
        {static} + speedUp()
        + start()
        + update()
        + updateMap()
    }
  }
  

  namespace Bomber {
    class Bomber.MainMenu {
        {static} + fontSize : double
        - chosenLevel : int
        - group : Group
        - numberOfLevel : int
        - x : double
        - y : double
        + drawPlayAgain()
        {static} + main()
        + nextLevel()
        + setBackGround()
        + setChosenLevel()
        + setVictoryBackGround()
        + start()
    }
  }
  

  Bomber.Game -up-|> javafx.scene.canvas.Canvas
  Bomber.Game o-- Bomber.GameFunction.Map : map
  Bomber.Game o-- Bomber.GameFunction.Texture : crackStage1
  Bomber.Game o-- Bomber.GameFunction.Texture : crackStage2
  Bomber.Game o-- Bomber.GameFunction.Texture : crackStage3
  Bomber.Game o-- Bomber.MainMenu : mainMenu
  Bomber.Game o-- Bomber.GameFunction.MapEditor : mapEditor
  Bomber.Game o-- Bomber.Entity.Player : player
  Bomber.Game o-- Bomber.GameFunction.InGameUI : userInterface
  Bomber.MainMenu -up-|> javafx.application.Application
  Bomber.MainMenu o-- Bomber.Game : game


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
